change npm package name
storagedb2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storagedb",
+  "name": "storagedb2",
   "version": "1.0.0",
   "description": "MongoDB-like API for HTML5 Storage (localStorage and sessionStorage)",
   "main": "lib/index.js",
@@ -13,6 +13,7 @@
   },
   "keywords": [
     "storagedb",
+    "storagedb2",
     "localStorage",
     "sessionStorage",
     "storage"
